hphp/hack/test/typecheck/open_tuples/tuple_coalesce_bad.php.exp
ERROR: File "tuple_coalesce_bad.php", line 6, characters 12-12:
Invalid index type for this tuple (Typing[4116])
ERROR: File "tuple_coalesce_bad.php", line 12, characters 12-12:
Invalid index type for this tuple (Typing[4116])
ERROR: File "tuple_coalesce_bad.php", line 14, characters 12-12:
Invalid index type for this tuple (Typing[4116])
ERROR: File "tuple_coalesce_bad.php", line 17, characters 12-12:
Invalid index type for this tuple (Typing[4116])
